--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,9 @@
 <head>
   <title>Adaptive Font Changer</title>
 </head>
-<body>
+<body style="min-width:300px;">
+  <h1>Adaptive Font Changer</h1>
+  <p>Change the font of the current page to one of the following:</p>
   <label for="font">Choose a font:</label>
   <select id="font" name="font">
     <option value="None">None</option>
