added logo to popup

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
   <title>Adaptive Font Changer</title>
 </head>
 <body style="min-width:300px;">
+  <img src="logo.svg" alt="Adaptive Font Changer Logo" width="48" height="48">
   <h1>Adaptive Font Changer</h1>
   <p>Change the font of the current page to one of the following:</p>
   <label for="font">Choose a font:</label>
