--- a/popup.html
+++ b/popup.html
@@ -6,10 +6,9 @@
 <body style="min-width:300px;">
   <div>
     <img src="logo.svg" alt="Adaptive Font Changer Logo" width="48" height="48">
-    <span>(real)</span>
+    <span style="font-size: 5em;">eal</span>
   </div>
   <h1>Adaptive Font Changer</h1>
-  <p>Change the font of the current page to one of the following:</p>
   <label for="font">Choose a font:</label>
   <select id="font" name="font">
     <option value="None">None</option>
